# pyioc

./: .gitignore  README.md  pyproject.toml
src/mybootstrap_ioc_itskovichanton/: config.py  context.py  di.py  env.py  ioc.py  utils.py
tests/: config.yml  main.py  test_ioc.py
